--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <h2>Jewel Aw</h2>
+        <p><b><i>EECS | 3rd year</i></b></p>
+        <p>Hi, I'm Jewel. I'm a EECS Concurrent Enrolment Junior with a passion for web development. I'm from Singapore, specifically Nanyang Technological University. Outside of my professional life, I enjoy cycling, kayaking and hiking. I'm also passionate about social issues with technological solutions.</p>
+        <img src="assets\img\me.JPEG" width="200">
+    </head>
     <body>
-        Homework 1
+        <p>My favourite places to eat in Berkeley are:</p>
+        <ul>
+            <li>Tastypot</li>
+            <li>Great China</li>
+            <li>Noodle Dumpling</li>
+        </ul>
+        
+          <a href="https://www.pinterest.com">My Favorite Website</a>
+
+        <h3>Part 2: Reading Responses</h3>
+        <ol>
+            <li>From the article, I learned the importance of actively analyzing and deconstructing the design elements of apps to improve one's design skills and product sense. This exercise helps in understanding the rationale behind design choices and encourages a deeper engagement with the product design process.</li>
+            <li>My favorite part of the article is the practical approach to learning design through the deconstruction of popular apps like Airbnb, Twitter, and Spotify. This method not only makes the learning process engaging but also provides real-world examples to study and learn from.</li>
+            <li>"Don't just use apps, study them."</li>
+            <li>I'd give it a strong 8 out of 10 for its practical advice and engaging method of teaching design principles.</li>
+        </ol>
     </body>
 </html>
