--- a/midterm/blog.html
+++ b/midterm/blog.html
@@ -24,9 +24,32 @@
                 </ul>
             </nav>
     </header>
+    <div class="company-nav">
+        <ul>
+            <li><a href="roasting-company.html">Roasting Company</a></li>
+            <li><a href="the-team.html">The Team</a></li>
+            <li><a href="our-coffee.html">Our Coffee</a></li>
+            <li><a href="our-vision.html">Our Vision</a></li>
+            <li><a href="tasting-house.html">Tasting House</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
+    </div>
+
+    <section class="title-strip">
+        <h1> BLOG </h1>
+    </section>
 
     <main>
-        <img src="assets/img/home.png" width=100%>
+        
+        <section class="blog-post">
+            <img src="assets/img/drip-brewing-filtered-coffee-pourover-600nw-473186926.jpg.webp" alt="Blog Image Description">
+            <section class="blog-content">
+                <h2>Four Tips For Better Brewing</h2>
+                <p>Everyone has their favorites when it comes to how they like their coffee brewed. Here are a few helpful guidelines to remember when it comes to making your perfect cup...</p>
+                <a href="link-to-full-article.html" class="read-more">READ MORE</a>
+            </section>
+        </section>
+        <!-- Add more blog posts here -->
     </main>
 
     <footer>
