--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -31,7 +31,7 @@
 
 					<li>
 						<p>Export the frame (hint: see bottom of the menu on the right) and insert it below.</p>
-						<p> <img class="img-scaled" src="assets/img/High Fidelity.png" /> </p>
+						<p> <img class="img-scaled" src="assets/img/origscreen.png" /> </p>
 						<p>Set your Figma page to "anyone with a link can view" and past the sharing link below.</p>
 						<p> https://www.figma.com/file/US61RNpv79RSMnZICxKWQd/figmatutorial?type=design&node-id=0%3A1&mode=design&t=C3xkfNx1nPw6mmuj-1 </p>
 					</li>
