--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <body>
-        Lab 1
+        <p>Part 1</p>
+        <p>1. https://boards.greenhouse.io/thenewyorktimes</p>
+        <p>2. nyt-cheltenham</p>
+        <p>4. <img src="q3.png" width="600px"></p>
+
+        <p>Part 2</p>
+        <p><img src="part2.1.png" width="600px"></p>
+        <p><img src="part2.2.png" width="600px"></p>
     </body>
 </html>
